# FreeCAD

./: CMakeLists.txt  CMakePresets.json  build_benchmark.sh  generate_benchmark_results.py
.github/workflows/: CI_master.yml  sub_buildPixi.yml  sub_buildWindows.yml
cMake/: FreeCadMacros.cmake  UseLibPackCLbundler.cmake
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake  PrintFinalReport.cmake  SetupBoost.cmake  SetupCoin3D.cmake  SetupEigen.cmake  SetupQt.cmake
src/: FCConfig.h
src/App/: Application.cpp  ApplicationDirectories.h  ApplicationPy.cpp  AutoTransaction.cpp  Branding.cpp  CMakeLists.txt  Color.cpp  ColorModel.cpp  ComplexGeoData.cpp  ComplexGeoDataPyImp.cpp  Datums.cpp  Document.cpp  DocumentObject.cpp  DocumentObjectExtension.cpp  DocumentObjectPyImp.cpp  DocumentObserver.cpp  DocumentObserverPython.cpp  DocumentPyImp.cpp  DynamicProperty.cpp  ElementMap.cpp  Expression.cpp  ExpressionTokenizer.cpp  Extension.cpp  ExtensionContainer.cpp  ExtensionContainerPyImp.cpp  ExtensionPyImp.cpp  FeaturePython.cpp  FeatureTest.cpp  GeoFeature.cpp  GeoFeatureGroupExtension.cpp  Graphviz.cpp  GroupExtension.cpp  GroupExtensionPyImp.cpp  Link.cpp  LinkBaseExtensionPyImp.cpp  MappedElement.cpp  Material.cpp  MaterialPyImp.cpp  MeasureManager.cpp  MergeDocuments.cpp  (+21 more)
src/Base/: Axis.cpp  AxisPyImp.cpp  Base64.cpp  BaseClass.cpp  BaseClassPyImp.cpp  BoundBoxPyImp.cpp  Builder3D.cpp  CMakeLists.txt  Console.cpp  ConsoleObserver.cpp  CoordinateSystem.cpp  CoordinateSystemPyImp.cpp  Debugger.cpp  Exception.cpp  Exception.h  ExceptionFactory.cpp  Factory.cpp  FileInfo.cpp  FileTemplate.cpp  InputSource.cpp  Interpreter.cpp  Matrix.cpp  MatrixPyImp.cpp  Parameter.cpp  Parameter.h  ParameterPy.cpp  Persistence.cpp  PersistencePyImp.cpp  PlacementPyImp.cpp  PreCompiled.h  PrecisionPyImp.cpp  ProgressIndicatorPy.cpp  PyObjectBase.cpp  QtTools.cpp  Quantity.cpp  QuantityPyImp.cpp  Reader.cpp  Rotation.cpp  RotationPyImp.cpp  Sequencer.cpp  (+26 more)
src/Gui/: Action.cpp  ActiveObjectList.cpp  Application.cpp  ApplicationPy.cpp  Assistant.cpp  AutoSaver.cpp  AxisOriginPyImp.cpp  BitmapFactory.cpp  BlenderNavigationStyle.cpp  CADNavigationStyle.cpp  CMakeLists.txt  CallTips.cpp  Camera.cpp  Clipping.cpp  CoinRiftWidget.cpp  Command.cpp  CommandDoc.cpp  CommandFeat.cpp  CommandLink.cpp  CommandMacro.cpp  CommandPyImp.cpp  CommandStd.cpp  CommandStructure.cpp  CommandTest.cpp  CommandView.cpp  CommandWindow.cpp  DemoMode.cpp  DlgAbout.cpp  DlgActionsImp.cpp  DlgActivateWindowImp.cpp  DlgAddProperty.cpp  DlgAddPropertyVarSet.cpp  DlgCheckableMessageBox.cpp  DlgCreateNewPreferencePackImp.cpp  DlgCustomizeImp.cpp  DlgCustomizeSpNavSettings.cpp  DlgCustomizeSpaceball.cpp  DlgEditFileIncludePropertyExternal.cpp  DlgExpressionInput.cpp  DlgInputDialogImp.cpp  (+175 more)
src/Gui/3Dconnexion/: GuiNativeEventWin32.cpp
src/Gui/DAGView/: DAGFilter.cpp  DAGModel.cpp  DAGRectItem.cpp
src/Gui/Dialogs/: DlgAddProperty.cpp  DlgAddPropertyVarSet.cpp  DlgCustomizeSpNavSettings.cpp  DlgExpressionInput.cpp
src/Gui/Inventor/: So3DAnnotation.cpp  SoAxisCrossKit.cpp  SoFCBackgroundGradient.cpp
src/Gui/Inventor/Draggers/: SoRotationDragger.cpp
src/Gui/Language/: Translator.cpp
src/Gui/PreferencePages/: DlgSettings3DViewImp.cpp  DlgSettingsAdvanced.cpp  DlgSettingsCacheDirectory.cpp  DlgSettingsDocumentImp.cpp  DlgSettingsEditor.cpp  DlgSettingsGeneral.cpp  DlgSettingsLightSources.cpp  DlgSettingsNavigation.cpp  DlgSettingsUI.cpp  DlgSettingsWorkbenchesImp.cpp
src/Gui/Quarter/: SoQTQuarterAdaptor.cpp
src/Gui/Selection/: SelectionView.cpp
src/Gui/TaskView/: TaskAppearance.cpp  TaskDialog.cpp  TaskDialogPython.cpp  TaskImage.cpp  TaskSelectLinkProperty.cpp  TaskView.cpp
src/Gui/propertyeditor/: PropertyEditor.cpp  PropertyItem.cpp  PropertyItemDelegate.cpp  PropertyModel.cpp
src/Main/: CMakeLists.txt  MainCmd.cpp  MainGui.cpp  MainPy.cpp
src/Mod/Assembly/App/: AppAssembly.cpp  AssemblyLink.cpp  AssemblyObject.cpp  AssemblyObjectPyImp.cpp  AssemblyUtils.cpp  BomObject.cpp  CMakeLists.txt  JointGroup.cpp  PreCompiled.h
src/Mod/Assembly/Gui/: AppAssemblyGui.cpp  CMakeLists.txt  PreCompiled.h  ViewProviderAssembly.cpp  ViewProviderAssemblyLink.cpp  ViewProviderAssemblyPyImp.cpp
src/Mod/CAM/App/: AppPath.cpp  AppPathPy.cpp  Area.cpp  AreaPyImp.cpp  CMakeLists.txt  Command.cpp  CommandPyImp.cpp  FeatureArea.cpp  FeaturePathShape.cpp  Path.cpp  PathPyImp.cpp  PathSegmentWalker.cpp  PreCompiled.h  PropertyPath.cpp  Voronoi.cpp  VoronoiCellPyImp.cpp  VoronoiEdgePyImp.cpp  VoronoiPyImp.cpp  VoronoiVertexPyImp.cpp
src/Mod/CAM/Gui/: AppPathGui.cpp  AppPathGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  TaskDlgPathCompound.cpp  ViewProviderPath.cpp
src/Mod/Drawing/App/: AppDrawing.cpp  AppDrawingPy.cpp  CMakeLists.txt  DrawingExport.cpp  FeatureClip.cpp  FeaturePage.cpp  FeatureProjection.cpp  FeatureView.cpp  FeatureViewAnnotation.cpp  FeatureViewPart.cpp  FeatureViewSpreadsheet.cpp  FeatureViewSymbol.cpp  PageGroup.cpp  PreCompiled.h  ProjectionAlgos.cpp
src/Mod/Drawing/Gui/: AppDrawingGui.cpp  AppDrawingGuiPy.cpp  CMakeLists.txt  Command.cpp  DrawingView.cpp  PreCompiled.h  TaskDialog.cpp  TaskOrthoViews.cpp  ViewProviderPage.cpp  ViewProviderView.cpp  Workbench.cpp
src/Mod/Import/Gui/: AppImportGui.cpp  AppImportGuiPy.cpp  CMakeLists.txt  ExportOCAFGui.cpp  ImportOCAFGui.cpp  OCAFBrowser.cpp  PreCompiled.h
src/Mod/Import/Gui/dxf/: ImpExpDxfGui.cpp
src/Mod/Inspection/App/: AppInspection.cpp  CMakeLists.txt  InspectionFeature.cpp  PreCompiled.h
src/Mod/Sandbox/App/: AppSandbox.cpp  CMakeLists.txt  DocumentProtectorPy.cpp  DocumentThread.cpp  PreCompiled.h
src/Mod/Sandbox/Gui/: AppSandboxGui.cpp  CMakeLists.txt  Command.cpp  GLGraphicsView.cpp  Overlay.cpp  PreCompiled.h  TaskPanelView.cpp  Workbench.cpp
src/Mod/Web/App/: AppWeb.cpp  CMakeLists.txt  PreCompiled.h
src/Mod/Web/Gui/: CMakeLists.txt
src/Tools/: params_utils.py
src/Tools/generateTemplates/: templateCPPFile.py  templateClassPyExport.py  templateModuleAppFeature.py  templateModuleAppMain.py
tests/src/Base/: Reader.cpp
(+920 files in other folders)
